# audio-cast

./: .gitignore  AudioCast_PRD_Flutter_Tauri_RequirementsFocus.md  README.md  audiocast_mobile_desktop_design_docs.md
desktop/: IMPLEMENTATION_PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/app/: state.rs
desktop/src-tauri/src/audio/: decoder.rs  jitter.rs  mod.rs  output.rs
desktop/src-tauri/src/network/: mdns.rs  tcp.rs  udp.rs
desktop/src-tauri/src/protocol/: packet.rs
desktop/src/components/: BufferControl.vue  StatusIndicator.vue  VolumeControl.vue
desktop/src/stores/: audio.ts
mobile/: IMPLEMENTATION_PLAN.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  opus_encoder.cpp  opus_encoder.h  ring_buffer.h  udp_sender.cpp  udp_sender.h
mobile/android/app/src/main/kotlin/com/audiocast/mobile/: AudioCaptureService.kt  AudioEngine.kt  MainActivity.kt  TcpHandshakeClient.kt
mobile/lib/: main.dart
mobile/lib/models/: device.dart
mobile/lib/pages/: home_page.dart
mobile/lib/services/: mdns_service.dart  method_channel.dart
mobile/lib/stores/: audio_store.dart
mobile/test/: widget_test.dart
