[package]
name = "audiocast-desktop"
version = "0.1.0"
description = "AudioCast Desktop - 局域网音频转发接收端"
authors = ["AudioCast"]
edition = "2021"

[lib]
name = "audiocast_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opus = "0.3"
cpal = "0.15"
mdns-sd = "0.11"
byteorder = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
hostname = "0.4"
